feat(Country Risk): Add roles to JWT token claims - Updated the JWT token generation method to include user roles in the token claims. - Roles are now available in the token payload and can be used for role-based access control on the frontend.